--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: main
+          fetch-depth: 0
 
       - uses: mhanberg/gigalixir-action@v0.3.0
         with:
